# SparseConvNet_cpp

./: .gitignore  CMakeLists.txt  build.sh
save/: SubmanifoldConvolution_0.npy
sparseconvnet/: CMakeLists.txt
sparseconvnet/SCN/: sparseconvnet_cuda.cpp
src/: example-app.cpp  model.cpp  model.h
